--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,57 +1,39 @@
 name: responsive_text
-description: "A customizable text widget that dynamically scales its font size based on screen size or container dimensions, ensuring legibility across devices."
-version: 0.0.1
-publish_to: none
-# homepage: https://github.com/najeebnaju512/responsive_text
-# repository: https://github.com/najeebnaju512/responsive_text
-# issue_tracker: https://github.com/najeebnaju512/responsive_text/issues
+description: "ResponsiveText is a versatile Flutter widget for responsive text scaling, offering customizable font size adaptation based on screen dimensions, perfect for enhancing text readability across devices."
+version: 1.0.3
+homepage: https://github.com/muhammednajeebay/responsive_text?tab=readme-ov-file#readme
+repository: https://github.com/muhammednajeebay/responsive_text
+topics: [responsive, text, scaling, ui, flutter]
+documentation: https://pub.dev/documentation/responsive_text/latest/
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=3.4.3 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
+# flutter:
+#   plugin:
+#     platforms:
+#       android:
+#         pluginClass: ResponsiveTextPlugin
+#       ios:
+#         pluginClass: ResponsiveTextPlugin
+#       web:
+#         pluginClass: ResponsiveTextWeb
+#         fileName: responsive_text_web.dart
+#       linux:
+#         pluginClass: ResponsiveTextPlugin
+#       macos:
+#         pluginClass: ResponsiveTextPlugin
+#       windows:
+#         pluginClass: ResponsiveTextPlugin
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
-flutter:
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/to/asset-from-package
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/to/font-from-package
