chore: rename package to flutter_responsive_text and update references
- Change package name from responsive_text to flutter_responsive_text in pubspec.yaml, README.md, example files, and tests
- Ensure all dependencies and imports reflect the new package name for consistency

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,8 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  responsive_text:
-    path: ../
+  flutter_responsive_text:
+  path: ../
+publish_to: none
 
 dev_dependencies:
   flutter_test:
