--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: responsive_text
+name: flutter_responsive_text
 description: "ResponsiveText is a versatile Flutter widget for responsive text scaling, offering customizable font size adaptation based on screen dimensions, perfect for enhancing text readability across devices."
 version: 1.0.0
 homepage: https://github.com/muhammednajeebay/responsive_text
