--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_responsive_text:
+  responsive_text_plus:
     path: ../
 publish_to: none
 
