chore: lower Dart SDK version requirement in pubspec.yaml
Updated the Dart SDK version constraint from >=3.4.3 to >=3.2.0 to accommodate broader compatibility with existing projects.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,7 +3,7 @@ description: Example app for responsive_text package
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.4.3 <4.0.0" 
+  sdk: ">=3.2.0 <4.0.0"  # Lowered from >=3.4.3
   flutter: ">=1.17.0"
 
 dependencies:
