--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,10 @@ name: responsive_text_plus
 description: "A customizable text widget that dynamically scales its font size based on screen size or container dimensions, ensuring legibility across devices."
 version: 1.0.3
 homepage: https://github.com/muhammednajeebay/responsive_text
+documentation: https://muhammednajeebay.github.io/responsive_text/
 repository: https://github.com/muhammednajeebay/responsive_text
+Author: Muhammed Najeeb AY
+author_url: https://najeebay.netlify.app/
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
